@@ -1,6 +1,0 @@
-[lib_simplecomplex_inspect]
-trace_limit = 3
-truncate = 500
-output_max = 1048576
-exectime_percent = 85
-guleroedeer[1] = blå
