@@ -1,0 +1,54 @@
+; CONFIGURATION FILE HELP
+; ------------------------------------------------------------------------------
+; Character set, newline and editors:
+; - character set: UTF-8
+; - newline: \n, carriage return \r is illegal
+; - editors: don't use ™MS ™Windows ™Notepad, use ™Notepad++
+; Sections:
+; - configuration must start with a [section]
+; Names (section, key):
+; - must consist of letters (lower, upper), digits, hyphen and underscore
+; Illegal special keys:
+; - null, yes, no, true, false, on, off, none
+; Quotes:
+; - double quotes; only required then leading or trailing space
+; Values are single-lined:
+; - use \n (single backslash) to indicate newline
+; Values become string, except:
+; - null|true|false: null, boolean
+; - 8|0.8: integer, float
+; Empty string value:
+; - key =
+; - key = ""
+; Comments:
+; - line comment begins with semicolon; inline comment not supported
+; Example:
+; [some_section]
+; some-flat-var = some string
+; someIndexedList[] = first
+; someIndexedList[] = second
+; someKeyedList[first] = primary
+; someKeyedList[second] = secondary
+; ------------------------------------------------------------------------------
+[lib_vendor_package]
+string = string
+string-empty =
+string-leading-trailing-space = " leading...trailing "
+string-newlined = new\nline
+camelCasedKey = camelCased key
+under_scored_key = under_scored key
+lisp-cased-key = lisp-cased key
+_null = null
+_yes = yes
+_no = no
+_true = true
+_false = false
+_on = on
+_off = off
+_none = none
+integer = 8
+float = 0.8
+indexed-list[] = first
+indexed-list[] = second
+keyed-list[first] = primary
+keyed-list[second] = secondary
